GH-3226: Optional lazy indexing for GraphMem2Roaring
- added new enum org.apache.jena.mem2.IndexingStrategy.java with the following strategies:
  - EAGER, LAZY, LAZY_PARALLEL, MANUAL, MINIMAL

- implemented all strategies in org.apache.jena.mem2.store.roaring.RoaringTripleStore and added the following methods:
  - #getIndexingStrategy
  - #clearIndex
  - #initializeIndex
  - #initializeIndexParallel
  - #isIndexInitialized
- implemented additional tests for RoaringTripleStore

- extended GraphMem2Roaring to support the indexing strategies and added new methods:
  - #getIndexingStrategy
  - #clearIndex
  - #initializeIndex
  - #initializeIndexParallel
  - #isIndexInitialized
- implemented additional tests for GraphMem2Roaring
- refactored RoaringTripleStore by extracting:
  - org.apache.jena.mem2.store.roaring.NodesToBitmapsMap
  - org.apache.jena.mem2.store.roaring.TripleSet
  - org.apache.jena.mem2.store.roaring.strategies.StoreStrategy
  - org.apache.jena.mem2.store.roaring.strategies.EagerStoreStrategy
  - org.apache.jena.mem2.store.roaring.strategies.LazyStoreStrategy
  - org.apache.jena.mem2.store.roaring.strategies.ManualStoreStrategy
  - org.apache.jena.mem2.store.roaring.strategies.MinimalStoreStrategy

- added new record FastHashSet.IndexedKey to pair index and key of an entry
- added new methods to org.apache.jena.mem2.collection.FastHashSet:
  - #indexedKeyIterator
  - #indexedKeySpliterator
  - #indexedKeyStream
  - #indexedKeyStreamParallel
- added org.apache.jena.mem2.iterator.SparseArrayIndexedIterator
- added org.apache.jena.mem2.spliterator.SparseArrayIndexedSpliterator
- added tests for new methods and classes
- fixed minor bugs in existing SparseArraySpliteratorTest and SparseArraySubSpliteratorTest

- updated org.apache.jena.mem.graph.helper.Context and GraphTripleNodeHelperCurrent to support parameterized benchmarks for the new indexing strategies
- updated existing benchmark tests with reasonable default parameters for the new indexing strategi